--- a/src/lib/css/markdown.css
+++ b/src/lib/css/markdown.css
@@ -632,7 +632,7 @@
 
 .markdown-body .highlight pre {
     margin-bottom: 0;
-    word-break: normal;
+    word-break: break-word;
 }
 
 .markdown-body .highlight pre,
