--- a/src/lib/css/markdown.css
+++ b/src/lib/css/markdown.css
@@ -11,7 +11,7 @@
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 16px;
     line-height: 1.5;
-    overflow-wrap: anywhere;
+    word-wrap: break-word;
 }
 
 .markdown-body .pl-c {
@@ -612,10 +612,15 @@
     content: "\00a0";
 }
 
+.markdown-body pre {
+    word-wrap: normal;
+}
+
 .markdown-body pre > code {
     padding: 0;
     margin: 0;
     font-size: 100%;
+    word-break: normal;
     white-space: pre;
     background: transparent;
     border: 0;
@@ -627,6 +632,7 @@
 
 .markdown-body .highlight pre {
     margin-bottom: 0;
+    word-break: normal;
 }
 
 .markdown-body .highlight pre,
@@ -645,7 +651,7 @@
     margin: 0;
     overflow: visible;
     line-height: inherit;
-    overflow-wrap: normal;
+    word-wrap: normal;
     background-color: transparent;
     border: 0;
 }
